# robot_rl

./: .gitignore  README.md  amber_joint_log.csv  comparison_summary.csv  reward_plotting.m  reward_terms_iter1.csv  run_sweep.py
SURF_results/: 2025-07-18_12-44-26_18000.csv  2025-07-21_17-31-19_27999.csv  2025-07-22_17-26-18_5000.csv  reward_plotting.asv  reward_plotting.m
SURF_results/model_data/: 2025-07-17_10-20-13_13999.csv  2025-07-18_12-44-26_18000.csv  2025-07-20_00-01-48_33349_1.csv  2025-07-20_00-01-48_33349_mid.csv  2025-07-21_16-40-02_9999.csv  2025-07-21_16-41-51_43348.csv  2025-07-22_15-55-42_5000.csv  2025-07-22_17-26-18_5000.csv
robot_assets/g1/: g1_21j_knee_lim_sphere_contact.usd  g1_21j_self_col.usd  g1_21j_urdf_v3.usd  g1_21j_urdf_v3_min_contacts_old.usd  g1_21j_urdf_v4_min_contacts.usd
scripts/: mount_remote.sh
scripts/rsl_rl/: convert_TSmodeltoACmodel.py  data_collect_policy.py  export_parameters.py  export_to_hardware.py  play.py  play_and_plot.py  play_policy.py  plot_trajectories.py  run_data_collect.sh  run_play.py  train.py  train_policy.py
transfer/: clf.py  g1_log_analysis.py
transfer/Model_based/: amber_joint_log3D.csv  frame_to_video.py  threeD_plot.m
transfer/obelisk/: MUJOCO_LOG.TXT  README.md
transfer/obelisk/lidar_scan/: CMakeLists.txt  package.xml
transfer/obelisk/lidar_scan/config/: fastlio_config.yaml  mid360_config.json
transfer/obelisk/lidar_scan/launch/: fastlio_launch.py  fastlio_rviz_launch.py  mid360_launch.py  mid360_rviz_launch.py
transfer/obelisk/lidar_scan/rviz/: fastlio.rviz  mid360.rviz
transfer/sim/: g1_runner.py  isaac_sim_runner.py  mj_simulation.py  (+6 more)
(+396 files in other folders)
